Alterado a versão do tomcat de 7.0 para 7.0.69 e as opções do catalina.properties